# kreuzberg-txtai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.ai-rulez/: config.toml  config.yaml
.github/workflows/: ci.yaml  publish.yaml
src/kreuzberg_txtai/: __init__.py  pipeline.py
tests/: conftest.py  test_pipeline.py
